[FEATURE] Configurable formats for small, medium and large generated image variants
