# app/Http/Controllers/ExportController.php
@@ -108,6 +108,9 @@ class ExportController extends Controller
                 'width',
                 'height',
                 'thumbnail_s3_key',
+                'resize_s_s3_key',
+                'resize_m_s3_key',
+                'resize_l_s3_key',
                 'alt_text',
                 'caption',
                 'license_type',
@@ -123,6 +126,9 @@ class ExportController extends Controller
                 'ai_tags',
                 'url',
                 'thumbnail_url',
+                'resize_s_url',
+                'resize_m_url',
+                'resize_l_url',
                 'created_at',
                 'updated_at',
             ]);
@@ -143,6 +149,9 @@ class ExportController extends Controller
                     $asset->width,
                     $asset->height,
                     $asset->thumbnail_s3_key,
+                    $asset->resize_s_s3_key,
+                    $asset->resize_m_s3_key,
+                    $asset->resize_l_s3_key,
                     $asset->alt_text,
                     $asset->caption,
                     $asset->license_type,
@@ -158,6 +167,9 @@ class ExportController extends Controller
                     $aiTagNames,
                     $asset->url,
                     $asset->thumbnail_url,
+                    $asset->resize_s_url,
+                    $asset->resize_m_url,
+                    $asset->resize_l_url,
                     $asset->created_at?->toDateTimeString(),
                     $asset->updated_at?->toDateTimeString(),
                 ]);
